correcting html checker errors

--- a/Localisation.html
+++ b/Localisation.html
@@ -51,13 +51,13 @@
         <h3>Where to find us?</h3>
       </div>
       <div class="locations-row">
-        <article class="location-cards">
+        <div class="location-cards">
           <div class="location-img-box">
-            <img class="location-img" src="./images/location111.png" alt="">
+            <img class="location-img" src="./images/location111.png" alt="location1">
           </div>
           <div class="location-adresse-content">
             <div class="icon-box">
-              <img class="icon" src="./images/location-icon.png" alt="">
+              <img class="icon" src="./images/location-icon.png" alt="location icon">
             </div>
             <div class="location-adresse">
               <p>Robert Robertson,</p>
@@ -68,20 +68,20 @@
           </div>
           <div class="location-adresse-content">
             <div class="icon-box">
-              <img class="icon" src="./images/phone-icon.png" alt="">
+              <img class="icon" src="./images/phone-icon.png" alt="phone icon">
             </div>
             <div class="location-phoneNumber">
               <p>tel:020 7131 3535</p>
             </div>
           </div>
-        </article>
-        <article class="location-cards">
+        </div>
+        <div class="location-cards">
           <div class="location-img-box">
-            <img class="location-img" src="./images/location222.png" alt="">
+            <img class="location-img" src="./images/location222.png" alt="location2">
           </div>
           <div class="location-adresse-content">
             <div class="icon-box">
-              <img class="icon" src="./images/location-icon.png" alt="">
+              <img class="icon" src="./images/location-icon.png" alt="location icon">
             </div>
             <div class="location-adresse">
               <p>Robert Robertson,</p>
@@ -92,20 +92,20 @@
           </div>
           <div class="location-adresse-content">
             <div class="icon-box">
-              <img class="icon" src="./images/phone-icon.png" alt="">
+              <img class="icon" src="./images/phone-icon.png" alt="phone icon">
             </div>
             <div class="location-phoneNumber">
               <p>tel:020 7131 3535</p>
             </div>
           </div>
-        </article>
-        <article class="location-cards">
+        </div>
+        <div class="location-cards">
           <div class="location-img-box">
-            <img class="location-img" src="./images/location333.png" alt="">
+            <img class="location-img" src="./images/location333.png" alt="location3">
           </div>
           <div class="location-adresse-content">
             <div class="icon-box">
-              <img class="icon" src="./images/location-icon.png" alt="">
+              <img class="icon" src="./images/location-icon.png" alt="location icon">
             </div>
             <div class="location-adresse">
               <p>Robert Robertson,</p>
@@ -116,13 +116,13 @@
           </div>
           <div class="location-adresse-content">
             <div class="icon-box">
-              <img class="icon" src="./images/phone-icon.png" alt="">
+              <img class="icon" src="./images/phone-icon.png" alt="phone icon">
             </div>
             <div class="location-phoneNumber">
               <p>tel:020 7131 3535</p>
             </div>
           </div>
-        </article>
+        </div>
       </div>
     </div>
   </section>
@@ -131,12 +131,12 @@
       <div class="footer-content">
         <div class="info">
           <div class="footer-nav">
-            <a>home</a>
-            <a>about</a>
-            <a>menu</a>
-            <a>products</a>
-            <a>news</a>
-            <a>locations</a>
+            <a href="index.html">home</a>
+            <a href="index.html">about</a>
+            <a href="Menu.html">menu</a>
+            <a href="Menu.html">products</a>
+            <a href="#">news</a>
+            <a href="Localisation.html">locations</a>
           </div>
           <div class="footer-contact">
             <p>CONTACT</p>
@@ -144,7 +144,7 @@
             <p class="phone-number">tel:020 7131 3535</p>
           </div>
           <div>
-            <img class="footer-logo" src="./images/logo.png" alt="">
+            <img class="footer-logo" src="./images/logo.png" alt="logo">
           </div>
         </div>
         <div class="copyright">
