--- a/Menu.html
+++ b/Menu.html
@@ -42,12 +42,12 @@
       </div>
     </header>
   </div>
-  <section class="Menu">
+  <div class="Menu-section">
     <div class="Menu-content">
       <div class="Menu-row">
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/cappucino.png" alt="">
+            <img class="coffee-type-img" src="./images/cappucino.png" alt="cappucino">
           </div>
           <div class="coffee">
             <h3>Cappucino</h3>
@@ -58,7 +58,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/mocha.png" alt="">
+            <img class="coffee-type-img" src="./images/mocha.png" alt="mocha">
           </div>
           <div class="coffee">
             <h3>Mocha</h3>
@@ -69,7 +69,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/latte.png" alt="">
+            <img class="coffee-type-img" src="./images/latte.png" alt="latte">
           </div>
           <div class="coffee">
             <h3>Latte</h3>
@@ -80,7 +80,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/cold-java.png" alt="">
+            <img class="coffee-type-img" src="./images/cold-java.png" alt="cold-java">
           </div>
           <div class="coffee">
             <h3>Cold Java</h3>
@@ -93,7 +93,7 @@
       <div class="Menu-row">
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/espresso .png" alt="">
+            <img class="coffee-type-img" src="./images/espresso.jpg" alt="espresso">
           </div>
           <div class="coffee">
             <h3>Espresso</h3>
@@ -104,7 +104,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/iced-coffee.png" alt="">
+            <img class="coffee-type-img" src="./images/iced-coffee.png" alt="iced coffee">
           </div>
           <div class="coffee">
             <h3>Iced Coffee</h3>
@@ -115,7 +115,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/Flat-White.png" alt="">
+            <img class="coffee-type-img" src="./images/Flat-White.png" alt="Flat White">
           </div>
           <div class="coffee">
             <h3>Flat White</h3>
@@ -126,7 +126,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/Café-frappé.png" alt="">
+            <img class="coffee-type-img" src="./images/Café-frappé.png" alt="Café frappé">
           </div>
           <div class="coffee">
             <h3>Café Frappé</h3>
@@ -139,10 +139,10 @@
       <div class="Menu-row">
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/Cafe-Au-Lait.png" alt="">
+            <img class="coffee-type-img" src="./images/Cafe-Au-Lait.png" alt="Cafe Au Lait">
           </div>
           <div class="coffee">
-            <h3>Café  Au Lait</h3>
+            <h3>Café Au Lait</h3>
           </div>
           <div class="price-but">
             <button class="Menu-price">$8.60</button>
@@ -150,7 +150,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/americano.png" alt="">
+            <img class="coffee-type-img" src="./images/americano.png" alt="americano">
           </div>
           <div class="coffee">
             <h3>Americano</h3>
@@ -161,7 +161,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/Red-Eye.png" alt="">
+            <img class="coffee-type-img" src="./images/Red-Eye.png" alt="Red Eye">
           </div>
           <div class="coffee">
             <h3>Red Eye</h3>
@@ -172,7 +172,7 @@
         </article>
         <article class="menu-coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/Turkish-Coffee.png" alt="">
+            <img class="coffee-type-img" src="./images/Turkish-Coffee.png" alt="Turkish Coffee">
           </div>
           <div class="coffee">
             <h3>Turkish Coffee</h3>
@@ -188,7 +188,7 @@
         </button>
       </div>
     </div>
-  </section>
+  </div>
   <section class="reviews">
     <div class="home-reviews-content">
       <div class="reviews-title">
@@ -227,12 +227,12 @@
       <div class="footer-content">
         <div class="info">
           <div class="footer-nav">
-            <a>home</a>
-            <a>about</a>
-            <a>menu</a>
-            <a>products</a>
-            <a>news</a>
-            <a>locations</a>
+            <a href="index.html">home</a>
+            <a href="index.html">about</a>
+            <a href="Menu.html">menu</a>
+            <a href="Menu.html">products</a>
+            <a href="#">news</a>
+            <a href="Localisation.html">locations</a>
           </div>
           <div class="footer-contact">
             <p>CONTACT</p>
@@ -240,7 +240,7 @@
             <p class="phone-number">tel:020 7131 3535</p>
           </div>
           <div>
-            <img class="footer-logo" src="./images/logo.png" alt="">
+            <img class="footer-logo" src="./images/logo.png" alt="logo">
           </div>
         </div>
         <div class="copyright">
