--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
           </h3>
         </div>
         <div class="form-container">
-          <form action="">
+          <form action="POST">
             <input type="text" placeholder="First Name">
             <input type="text" placeholder="Last Name">
             <input type="email" placeholder="Email">
@@ -71,12 +71,12 @@
       <div class="footer-content">
         <div class="info">
           <div class="footer-nav">
-            <a>home</a>
-            <a>about</a>
-            <a>menu</a>
-            <a>products</a>
-            <a>news</a>
-            <a>locations</a>
+            <a href="index.html">home</a>
+            <a href="index.html">about</a>
+            <a href="Menu.html">menu</a>
+            <a href="Menu.html">products</a>
+            <a href="#">news</a>
+            <a href="Localisation.html">locations</a>
           </div>
           <div class="footer-contact">
             <p>CONTACT</p>
@@ -84,7 +84,7 @@
             <p class="phone-number">tel:020 7131 3535</p>
           </div>
           <div>
-            <img class="footer-logo" src="./images/logo.png" alt="">
+            <img class="footer-logo" src="./images/logo.png" alt="logo">
           </div>
         </div>
         <div class="copyright">
