--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section class="home-menu">
     <div class="home-menu-content">
       <div class="home-menu-title">
-        <p>Our Menu</p>
+        <h4>Our Menu</h4>
       </div>
       <div class="home-menu-mini-title">
         <p>Coffee</p>
@@ -102,7 +102,7 @@
       <div class="mini-menu">
         <article class="coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/cappucino.png" alt="">
+            <img class="coffee-type-img" src="./images/cappucino.png" alt="cappucino">
           </div>
           <div>
             <h3>Cappucino</h3>
@@ -116,7 +116,7 @@
         </article>
         <article class="coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/mocha.png" alt="">
+            <img class="coffee-type-img" src="./images/mocha.png" alt="mocha">
           </div>
           <div>
             <h3>Mocha</h3>
@@ -130,7 +130,7 @@
         </article>
         <article class="coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/latte.png" alt="">
+            <img class="coffee-type-img" src="./images/latte.png" alt="latte">
           </div>
           <div>
             <h3>Latte</h3>
@@ -144,7 +144,7 @@
         </article>
         <article class="coffee-cards">
           <div class="coffee-type-img-box">
-            <img class="coffee-type-img" src="./images/cold-java.png" alt="">
+            <img class="coffee-type-img" src="./images/cold-java.png" alt="cold-java">
           </div>
           <div>
             <h3>Cold Java</h3>
@@ -171,7 +171,7 @@
       <div class="customer-home-reviews">
         <article class="home-reviews-cards">
           <div class="good-reviews">
-            <p>As good as advertised</p>
+            <h4>As good as advertised</h4>
           </div>
           <div class="reviews-text">
             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit,”</p>
@@ -182,7 +182,7 @@
         </article>
         <article class="home-reviews-cards">
           <div class="good-reviews">
-            <p>As good as advertised</p>
+            <h4>As good as advertised</h4>
           </div>
           <div class="reviews-text">
             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit,”</p>
@@ -193,7 +193,7 @@
         </article>
         <article class="home-reviews-cards">
           <div class="good-reviews">
-            <p>As good as advertised</p>
+            <h4>As good as advertised</h4>
           </div>
           <div class="reviews-text">
             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit,”</p>
@@ -205,26 +205,26 @@
       </div>
     </div>
   </section>
-  <section class="map-section">
+  <div class="map-section">
     <div class="map-box">
       <div class="map">
         <div class="location-stats">
-          <img src="./images/location.png" alt="">
+          <img src="./images/location.png" alt="map">
         </div>
       </div>
     </div>
-  </section>
+  </div>
   <footer>
     <div class="footer-dim">
       <div class="footer-content">
         <div class="info">
           <div class="footer-nav">
-            <a>home</a>
-            <a>about</a>
-            <a>menu</a>
-            <a>products</a>
-            <a>news</a>
-            <a>locations</a>
+            <a href="index.html">home</a>
+            <a href="index.html">about</a>
+            <a href="Menu.html">menu</a>
+            <a href="Menu.html">products</a>
+            <a href="#">news</a>
+            <a href="Localisation.html">locations</a>
           </div>
           <div class="footer-contact">
             <p>CONTACT</p>
@@ -232,7 +232,7 @@
             <p class="phone-number">tel:020 7131 3535</p>
           </div>
           <div>
-            <img class="footer-logo" src="./images/logo.png" alt="">
+            <img class="footer-logo" src="./images/logo.png" alt="logo">
           </div>
         </div>
         <div class="copyright">
