correcting 1 more html checker error

--- a/Menu.html
+++ b/Menu.html
@@ -197,7 +197,7 @@
       <div class="customer-reviews">
         <article class="reviews-cards">
           <div class="coffee-type-review">
-            <p>Cold java &#x2713;</p>
+            <h4>Cold java &#x2713;</h4>
           </div>
           <div class="good-reviews-text">
             <p>&rdquo;Good quality coffee with expresso perfect combination for a cup of cold joe&rdquo;</p>
@@ -205,7 +205,7 @@
         </article>
         <article class="reviews-cards">
           <div class="coffee-type-review">
-            <p>Mocha &#x2713;</p>
+            <h4>Mocha &#x2713;</h4>
           </div>
           <div class="good-reviews-text">
             <p>&rdquo;Delicious deep coffee flavour with only a hint of chocolate. By far my favourite coffee blend.&rdquo;</p>
@@ -213,7 +213,7 @@
         </article>
         <article class="reviews-cards">
           <div class="coffee-type-review">
-            <p>Cappuccino &#x2713;</p>
+            <h4>Cappuccino &#x2713;</h4>
           </div>
           <div class="good-reviews-text">
             <p>&rdquo;Bartons Cappuccino is velvety smooth and quality coffee!&rdquo;</p>
